# conan-libmagic

./: .travis.yml  README.md  appveyor.yml  conanfile.py
.travis/: install.sh  run.sh
test/: CMakeLists.txt  conanfile.py  example.c
test_package/: test_package.cpp
